added backend oauth2 configs and updates