@@ -1,12 +1,10 @@
 package com.project.grabtitude.config;
 
-
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -18,21 +16,18 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+import org.springframework.context.annotation.Lazy;
+import com.project.grabtitude.services.UserService;
 
 import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableMethodSecurity
 @EnableWebSecurity
-public class SecurityConfig implements WebMvcConfigurer {
+@EnableMethodSecurity
+public class SecurityConfig {
 
     private final UserDetailsService userDetailsService;
-    // OAuth handlers available if OAuth is enabled in future
-    private final OAuthAuthenticationSuccessHandler oAuthAuthenticationSuccessHandler;
-    private final OAuthAuthenticationFailureHandler oAuthAuthenticationFailureHandler;
 
     @Value("${jwt.secret}")
     private String jwtSecret;
@@ -43,86 +38,100 @@ public class SecurityConfig implements WebMvcConfigurer {
     @Value("${app.cors.allowed-origins:http://localhost:5173}")
     private String corsAllowedOrigins;
 
-    public SecurityConfig(UserDetailsService userDetailsService,
-                          OAuthAuthenticationSuccessHandler oAuthAuthenticationSuccessHandler,
-                        OAuthAuthenticationFailureHandler oAuthAuthenticationFailureHandler){
+    public SecurityConfig(UserDetailsService userDetailsService) {
         this.userDetailsService = userDetailsService;
-        this.oAuthAuthenticationSuccessHandler = oAuthAuthenticationSuccessHandler;
-        this.oAuthAuthenticationFailureHandler = oAuthAuthenticationFailureHandler;
     }
-    
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**")
-                .allowedOriginPatterns("*")
-                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
-                .allowedHeaders("*")
-                .allowCredentials(true);
-    }
-    
+
+    /**
+     * Security filter chain configuration
+     */
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // Disable CSRF for APIs (enable if using session-based auth)
+                .csrf(csrf -> csrf.disable())
+                // Enable CORS with custom configuration
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // Authorization rules
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(
+                                "/auth/**", "/home", "/",
+                                "/profile/**", "/get-user/**", "/get-user-id/**",
+                                "/problems/**", "/topics/**", "/oauth2/**",
+                                "/login/**", "/test/**"
+                        ).permitAll()
+                        .requestMatchers("/admin/**", "/problems/admin/**", "/topics/admin/**")
+                        .hasRole("ADMIN")
+                        .requestMatchers("/user/**").authenticated()
+                        .anyRequest().authenticated()
+                )
+                // Session management - use IF_REQUIRED for hybrid auth
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+                // Use custom userDetailsService
+                .userDetailsService(userDetailsService)
+                // JWT filter
+                .addFilterBefore(new JwtAuthenticationFilter(jwtUtil()), UsernamePasswordAuthenticationFilter.class)
+                // OAuth2 login config
+                .oauth2Login(oauth -> oauth
+                        .successHandler(oAuthAuthenticationSuccessHandler())
+                        .failureUrl("/auth/oauth2/failure")
+                );
 
-        httpSecurity.csrf(customizer -> customizer.disable());
-        httpSecurity.cors(customizer -> customizer.configurationSource(corsConfigurationSource()));
-
-        httpSecurity.authorizeHttpRequests(request -> {
-            request.requestMatchers("/auth/**", "/home", "/", "/profile/**", "/get-user/**", "/get-user-id/**", "/problems/**", "/topics/**").permitAll();
-            request.requestMatchers("/admin/**", "/problems/admin/**", "/topics/admin/**").hasRole("ADMIN");
-            request.requestMatchers("/user/**").authenticated();
-            request.anyRequest().authenticated();
-        });
-
-        httpSecurity.sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-        httpSecurity.userDetailsService(userDetailsService);
-        httpSecurity.httpBasic(Customizer.withDefaults());
-        httpSecurity.formLogin(Customizer.withDefaults());
-        // JWT filter using configured secret
-        httpSecurity.addFilterBefore(new JwtAuthenticationFilter(jwtUtil()), UsernamePasswordAuthenticationFilter.class);
-
-//        httpSecurity.oauth2Login((oauth) -> {
-//            oauth.successHandler(oAuthAuthenticationSuccessHandler);
-//            oauth.failureHandler(oAuthAuthenticationFailureHandler);
-//        });
-
-        return httpSecurity.build();
+        return http.build();
     }
 
+    /**
+     * CORS configuration
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Property-driven CORS whitelist
+
         List<String> origins = Arrays.stream(corsAllowedOrigins.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
                 .toList();
+
         configuration.setAllowedOriginPatterns(origins);
-        
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L); // Cache preflight for 1 hour
-        
+        configuration.setMaxAge(3600L); // cache preflight response for 1h
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
+    /**
+     * JWT Utility Bean
+     */
     @Bean
     public JwtUtil jwtUtil() {
         return new JwtUtil(jwtSecret, jwtExpirationMs);
     }
 
     @Bean
-    public ModelMapper modelMapper(){
+    @Lazy
+    public OAuthAuthenticationSuccessHandler oAuthAuthenticationSuccessHandler() {
+        return new OAuthAuthenticationSuccessHandler(null, jwtUtil());
+    }
+
+    /**
+     * ModelMapper Bean
+     */
+    @Bean
+    public ModelMapper modelMapper() {
         ModelMapper modelMapper = new ModelMapper();
         modelMapper.getConfiguration().setMatchingStrategy(MatchingStrategies.STRICT);
         return modelMapper;
     }
 
+    /**
+     * Password Encoder Bean
+     */
     @Bean
-    public BCryptPasswordEncoder bCryptPasswordEncoder(){
+    public BCryptPasswordEncoder bCryptPasswordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
 }
